# P0li

./: .env.example  .gitignore  Dockerfile  IMPLEMENTATION_PLAN.md  README.md  deploy.sh  docker-compose.yml  isWeather.py  langGuide.md  pyproject.toml  setup-systemd.sh  vps-setup.sh
.claude/commands/: setup-cicd.md
.github/workflows/: ci.yml
scripts/: approve_usdc.py  backtest_sports.py  backtest_weather.py  demo_dashboard.py  exoscale-security-groups.sh  setup_clob.py  setup_relayer.py  verify_clob.py  verify_us_api.py
src/polybot/: cli.py  config.py  models.py
src/polybot/api/: clob_client.py  coingecko.py  espn.py  espn_live.py  gamma.py  noaa.py  odds.py  openmeteo.py  polymarket_us.py
src/polybot/backtest/: engine.py  sports_engine.py
src/polybot/paper/: trader.py
src/polybot/scanner/: graph.py  sports_graph.py  sports_state.py  state.py
src/polybot/strategies/: crypto.py  delay_arb.py  exit.py  sports.py  us_direct.py  weather.py
src/polybot/telegram/: bot.py
src/polybot/trading/: engine.py
src/polybot/ui/: dashboard.py
src/polybot/utils/: retry.py
src/polybot/web/: dashboard_service.py  server.py
tests/: conftest.py  test_exit_strategy.py  test_scanner_integration.py  test_sports_graph.py  test_sports_strategy.py  test_weather_strategy.py
tests/strategies/: test_delay_arb.py
