[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "polymarket-bot"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "langgraph==1.1.3",
    "langchain-core==1.2.20",
    "httpx>=0.28.1,<1.0",
    "pydantic>=2.12.5,<3.0",
    "pydantic-settings>=2.7.0,<3.0",
    "loguru>=0.7.3,<1.0",
    "rich>=14.0.0,<15.0",
    "python-dotenv>=1.1.0,<2.0",
    "uvicorn[standard]>=0.34.0,<1.0",
    "fastapi>=0.115.0,<1.0",
    "python-telegram-bot>=21.0,<22.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-asyncio>=0.25,<1.0",
    "ruff>=0.9,<1.0",
    "mypy>=1.14,<2.0",
]

[project.scripts]
scan = "polybot.cli:run"

[tool.hatch.build.targets.wheel]
packages = ["src/polybot"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=0.26.0",
]
